tests/ui/const-generics/issues/issue-72352.min.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-72352.rs:8:42
   |
LL | unsafe fn unsafely_do_the_thing<const F: fn(&CStr) -> usize>(ptr: *const c_char) -> usize {
   |                                          ^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

